@@ -13,8 +13,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
   </properties>
 
   <repositories>
@@ -59,6 +59,12 @@
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
+          <configuration>
+            <compilerArgs>
+              <arg>--add-exports</arg>
+              <arg>javafx.graphics/com.sun.glass.ui=com.andrei</arg>
+            </compilerArgs>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
@@ -106,10 +112,16 @@
           <artifactId>javafx-maven-plugin</artifactId>
           <version>0.0.8</version>
           <configuration>
-              <mainClass>HelloFX</mainClass>
+            <stripDebug>true</stripDebug>
+            <compress>2</compress>
+            <noHeaderFiles>true</noHeaderFiles>
+            <noManPages>true</noManPages>
+            <launcher>application</launcher>
+            <jlinkImageName>app</jlinkImageName>
+            <jlinkZipName>appzip</jlinkZipName>
+            <mainClass>uk.ac.bristol.App</mainClass>
           </configuration>
         </plugin>
-
       </plugins>
     </pluginManagement>
   </build>
